--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=
+DATABASE_URL="postgresql://db_owner:wFURJ5b9gvnY@ep-wandering-frost-a5uutlkq.us-east-2.aws.neon.tech/db?sslmode=require"
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWR2YW5jZWQtZXNjYXJnb3QtOTAuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_yM2Onrd0JjeaAgEQtZ454Lqg4qF82i6nrATo6vzzBe
